@@ -2,6 +2,8 @@ package com.snippetsearcher.snippet.service;
 
 import com.snippetsearcher.snippet.client.AssetClient;
 import com.snippetsearcher.snippet.client.PermissionClient;
+import com.snippetsearcher.snippet.client.language.LanguageClient;
+import com.snippetsearcher.snippet.dto.LanguageDtos;
 import com.snippetsearcher.snippet.dto.PermissionTypeDto;
 import com.snippetsearcher.snippet.dto.SnippetPermissionDto;
 import com.snippetsearcher.snippet.dto.UserAccountDto;
@@ -16,14 +18,15 @@ import com.snippetsearcher.snippet.dto.response.SnippetResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetTestResponse;
 import com.snippetsearcher.snippet.exception.SnippetNotFoundException;
 import com.snippetsearcher.snippet.jobs.SnippetJobProducer;
-import com.snippetsearcher.snippet.language.LanguageClient;
 import com.snippetsearcher.snippet.model.Snippet;
 import com.snippetsearcher.snippet.model.SnippetComplianceStatus;
+import com.snippetsearcher.snippet.model.SnippetTest;
 import com.snippetsearcher.snippet.repository.SnippetRepository;
 import com.snippetsearcher.snippet.repository.SnippetTestRepository;
 import com.snippetsearcher.snippet.repository.specification.SnippetSpecifications;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -46,6 +49,7 @@ import org.springframework.web.multipart.MultipartFile;
 public class SnippetService {
 
   private static final Logger log = LoggerFactory.getLogger(SnippetService.class);
+  private static final String UNSPECIFIED_VERSION_VALUE = "unspecified";
 
   private final SnippetRepository snippetRepository;
   private final AssetClient assetClient;
@@ -53,7 +57,7 @@ public class SnippetService {
   private final LanguageValidationService languageValidationService;
   private final LanguageClient languageClient;
   private final SnippetTestRepository snippetTestRepository;
-  private final SnippetJobProducer jobProducer; // 👈 CAMPO NUEVO
+  private final SnippetJobProducer jobProducer;
   private final String snippetsContainer;
 
   public SnippetService(
@@ -63,7 +67,7 @@ public class SnippetService {
       LanguageValidationService languageValidationService,
       LanguageClient languageClient,
       SnippetTestRepository snippetTestRepository,
-      SnippetJobProducer jobProducer, // 👈 PARÁMETRO NUEVO
+      SnippetJobProducer jobProducer,
       @Value("${asset-service.snippets-container:snippets}") String snippetsContainer) {
     this.snippetRepository = snippetRepository;
     this.assetClient = assetClient;
@@ -71,7 +75,7 @@ public class SnippetService {
     this.languageValidationService = languageValidationService;
     this.languageClient = languageClient;
     this.snippetTestRepository = snippetTestRepository;
-    this.jobProducer = jobProducer; // 👈 ASIGNACIÓN
+    this.jobProducer = jobProducer;
     this.snippetsContainer = snippetsContainer;
   }
 
@@ -86,15 +90,17 @@ public class SnippetService {
     UUID userId = user.id();
 
     // 2) Validar y subir archivo a asset-service
-    String assetKey = uploadValidatedSnippetContent(file, request.language(), request.version());
+    String normalizedVersion = normalizeVersion(request.version());
+    String normalizedDescription = normalizeDescription(request.description());
+    String assetKey = uploadValidatedSnippetContent(file, request.language(), normalizedVersion);
 
     // 3) Crear snippet en DB local
     Snippet snippet =
         new Snippet(
             request.name(),
             request.language(),
-            request.version(),
-            request.description(),
+            normalizedVersion,
+            normalizedDescription,
             assetKey,
             userId);
     markSnippetValid(snippet);
@@ -159,7 +165,7 @@ public class SnippetService {
             .toList();
     SnippetComplianceStatus complianceStatus =
         lintErrors.isEmpty() ? SnippetComplianceStatus.VALID : SnippetComplianceStatus.INVALID;
-    String complianceMessage = lintErrors.isEmpty() ? null : lintErrors.get(0).message();
+    String complianceMessage = lintErrors.isEmpty() ? null : lintErrors.getFirst().message();
     return SnippetResponse.fromEntity(
         snippet, content, lintErrors, tests, complianceStatus, complianceMessage);
   }
@@ -169,18 +175,18 @@ public class SnippetService {
       Jwt jwt, UUID snippetId, UpdateSnippetRequest request, MultipartFile file) {
     UserAccountDto user = ensureUser(jwt);
     Snippet snippet = loadSnippetOwnedBy(snippetId, user.id());
-    String assetKey = uploadValidatedSnippetContent(file, request.language(), request.version());
-    snippet.setName(request.name());
+    String resolvedName = resolveUpdatedName(request);
+    String resolvedDescription = resolveUpdatedDescription(snippet, request);
+    String resolvedVersion = resolveUpdatedVersion(snippet, request);
+    String assetKey = uploadValidatedSnippetContent(file, request.language(), resolvedVersion);
+    snippet.setName(resolvedName);
     snippet.setLanguage(request.language());
-    snippet.setDescription(request.description());
-    snippet.setVersion(request.version());
+    snippet.setDescription(resolvedDescription);
+    snippet.setVersion(resolvedVersion);
     snippet.setAssetKey(assetKey);
     markSnippetValid(snippet);
     snippet = snippetRepository.save(snippet);
 
-    // 👉 Use case: testing automático.
-    // No bloqueamos el update: solo encolamos un job para que un worker
-    // corra TODOS los tests de este snippet en background.
     jobProducer.enqueueRunAllTestsForSnippet(snippet.getId());
 
     return SnippetResponse.fromEntity(snippet);
@@ -244,7 +250,7 @@ public class SnippetService {
         collectLintErrors(language, version, new String(content, StandardCharsets.UTF_8));
 
     if (!errors.isEmpty()) {
-      SnippetLintErrorResponse firstError = errors.get(0);
+      SnippetLintErrorResponse firstError = errors.getFirst();
       String violatedRule =
           StringUtils.hasText(firstError.rule()) ? firstError.rule() : "desconocida";
       throw new IllegalArgumentException(
@@ -269,7 +275,8 @@ public class SnippetService {
 
   private List<SnippetLintErrorResponse> collectLintErrors(
       String language, String version, String content) {
-    var validation = languageValidationService.validate(language, version, content);
+    var validation =
+        languageValidationService.validate(language, normalizeVersion(version), content);
     if (validation == null || validation.valid() || validation.errors() == null) {
       return List.of();
     }
@@ -277,6 +284,61 @@ public class SnippetService {
     return validation.errors().stream()
         .map(e -> new SnippetLintErrorResponse(e.rule(), e.line(), e.col(), e.message()))
         .toList();
+  }
+
+  private String buildExecutableContent(String snippetContent, String testScript) {
+    if (!StringUtils.hasText(testScript)) {
+      throw new IllegalArgumentException("El script del test es obligatorio.");
+    }
+    return snippetContent + System.lineSeparator() + System.lineSeparator() + testScript;
+  }
+
+  private LanguageDtos.ExecuteResponse executeTest(Snippet snippet, String executableContent) {
+    try {
+      return languageClient.execute(
+          new LanguageDtos.ExecuteRequest(
+              snippet.getLanguage(), normalizeVersion(snippet.getVersion()), executableContent));
+    } catch (Exception ex) {
+      throw new IllegalStateException("No se pudo ejecutar el test del snippet.", ex);
+    }
+  }
+
+  private void updateTestResult(SnippetTest test, LanguageDtos.ExecuteResponse response) {
+    test.setLastRunAt(OffsetDateTime.now());
+    test.setLastRunExitCode(response.exitCode());
+    test.setLastRunOutput(response.stdout());
+    test.setLastRunError(response.stderr());
+  }
+
+  private String normalizeVersion(String version) {
+    if (!StringUtils.hasText(version)) {
+      return null;
+    }
+    String trimmed = version.trim();
+    return UNSPECIFIED_VERSION_VALUE.equalsIgnoreCase(trimmed) ? null : trimmed;
+  }
+
+  private String normalizeDescription(String description) {
+    return StringUtils.hasText(description) ? description.trim() : null;
+  }
+
+  private String resolveUpdatedName(UpdateSnippetRequest request) {
+    if (!StringUtils.hasText(request.name())) {
+      throw new IllegalArgumentException("El nombre es obligatorio.");
+    }
+    return request.name().trim();
+  }
+
+  private String resolveUpdatedDescription(Snippet snippet, UpdateSnippetRequest request) {
+    return request.description() == null
+        ? snippet.getDescription()
+        : normalizeDescription(request.description());
+  }
+
+  private String resolveUpdatedVersion(Snippet snippet, UpdateSnippetRequest request) {
+    return request.version() == null
+        ? normalizeVersion(snippet.getVersion())
+        : normalizeVersion(request.version());
   }
 
   private Specification<Snippet> buildSpecification(
